added database connection string

--- a/DGN/appsettings.Development.json
+++ b/DGN/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebProjectContext": "Server=db.cs.colman.ac.il;User Id=csdb2;password=Quality@Cs21;Database=csDatabase2;MultipleActiveResultSets=true"
   }
 }
